fixed extra space

--- a/css/circle.css
+++ b/css/circle.css
@@ -1,9 +1,4 @@
 
-/*
-	create by nasir farhadi
-	email : nasirfarhadi92@gmail.com
-	Github : nasirfarhadi92
-*/
 
 	.holderCircle{
 		width:40%;
@@ -44,8 +39,8 @@
 
 	@media ( max-width: 1300px){
 		.holderCircle{
-			visibility: hidden;
-			position: absolute;
+			display: none;
+			
 		}
 
 
@@ -201,22 +196,6 @@
 
 		}
 	
-	
-	}
-	@media only screen and (min-width: 600px) and (max-width: 767px){
-	
-	}
-	@media only screen and (min-width: 768px) and (max-width: 991px){
-	
-	}
-	@media only screen and (min-width: 992px) and (max-width: 1199px){
-	
-	}
-	@media only screen and (min-width: 1200px) and (max-width: 1499px){
-	
-	}
-	
-	@media only screen and (min-width: 1500px) {
 	
 	}
 	
